# sagarmatha-session

./: AUTHORS  Makefile.am  README.md  autogen.sh  config.guess  config.sub  configure.ac
capplet/: Makefile.am  csm-app-dialog.c  csm-properties-dialog.c
data/: Makefile.am  org.sagarmatha.SessionManager.gschema.xml.in  sagarmatha-session-properties.desktop.in.in
debian/: 55sagarmatha-session_gnomerc  README.Debian  changelog  control  control.in  rules  sagarmatha-session-common.install  sagarmatha-session-common.links  sagarmatha-session.install  sagarmatha-session.postinst  sagarmatha-session.prerm  sagarmatha-session.user-session.upstart  sagarmatha-wm.desktop.desktop
debian/po-up/: af.po  am.po  ar.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  (+46 more)
egg/: eggsmclient-xsmp.c
m4/: libtool.m4
po/: POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  gl.po  gu.po  (+66 more)
sagarmatha-session/: Makefile.am  README  csm-autostart-app.c  csm-inhibit-dialog.c  csm-logout-dialog.c  csm-manager.c  csm-presence.c  csm-session-fill.c  csm-util.c  main.c
tools/: Makefile.am  sagarmatha-session-check-accelerated-helper.c  sagarmatha-session-check-accelerated.c
(+14 files in other folders)
